--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
